[package]
name = "task-stake-pool"
version = "0.1.0"
description = "Task Stake Pool"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.9.9"
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]
